k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pigvelop-todo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - pigvelop.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: pigvelop.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: pigvelop-todo-service
          servicePort: 80
        path: /(.*)
